--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,8 @@
 
 // COMPONENTS
 @import 'components/App';
+@import 'components/toyApp';
+@import 'components/loginPage';
 @import 'components/toyPreview';
 @import 'components/toyList';
 @import 'components/toyFilter';
