--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,7 @@
 @import 'components/toyApp';
 @import 'components/loginPage';
 @import 'components/toyPreview';
+@import 'components/chatRoom';
 @import 'components/toyList';
 @import 'components/toyFilter';
 @import 'components/toyEdit';
